cmake_minimum_required(VERSION 3.12)
project(123)

ADD_DEFINITIONS(-DBoost_LIB_DIAGNOSTIC_DEFINITIONS)
add_compile_definitions(EXECUTION)
#ADD_DEFINITIONS(-DWINDOWS_PLATFORM)
set(CMAKE_CXX_STANDARD 14)

find_package(Boost 1.70 REQUIRED COMPONENTS system context)
find_package(mysql 1.20)

# message("find_package $ENV{Path}")
message(${Boost_FOUND})
message(${MYSQL_INCLUDE_DIR})
message(${MYSQL_LIBRARIES})
message(${MYSQL_LIBRARY_DIR})
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${MYSQL_INCLUDE_DIR})
#windows平台链接库的时候，boost代码当中会有相关判定，所以直接link_directories，避免相关问题
if(WIN32 AND Boost_FOUND)
	message("123123213")
    add_compile_definitions(WINDOWS_PLATFORM)
    link_directories(${Boost_LIBRARY_DIRS})
endif()
message("not in ???")
aux_source_directory(. DIR_SRCS)
add_subdirectory(algorithm)
add_subdirectory(data_center)
add_subdirectory(stock_base_info)
add_subdirectory(ui)
#add_executable(123 main.cpp data_fetch/DataFetc h.cpp data_fetch/DataFetch.h algorithm/Calculaotr.cpp algorithm/Calculaotr.h stock_base_info/stock_info.cpp stock_base_info/stock_info.h data_fetch/HttpHeader.cpp data_fetch/HttpHeader.h)
#add_executable(123 ${DIR_SRCS} output/FileResultOutput.cpp output/FileResultOutput.h)
if(NOT EXECUTION)
	add_library(123 SHARED ${DIR_SRCS})
else()
	add_executable(123 ${DIR_SRCS})
endif()

TARGET_LINK_LIBRARIES(123 data_center)
TARGET_LINK_LIBRARIES(123 algorithm)
TARGET_LINK_LIBRARIES(123 ui)
TARGET_LINK_LIBRARIES(123 stock_base_info)
TARGET_LINK_LIBRARIES(123 ${MYSQL_LIBRARIES})
list(APPEND MY_LIBS data_center)
list(APPEND MY_LIBS algorithm)
list(APPEND MY_LIBS ui)
list(APPEND MY_LIBS stock_base_info)
include (InstallRequiredSystemLibraries)
# list(APPEND MY_LIBS ${MYSQL_LIBRARIES})
# list(APPEND MY_LIBS ${Boost_LIBRARIES})
message(${Boost_LIBRARIES})
if(NOT WIN32)
    TARGET_LINK_LIBRARIES(123 ${Boost_LIBRARIES})
endif()
if(WIN32)
	set(CPACK_GENERATOR "WIX")
	INSTALL(TARGETS 123 ${MY_LIBS} RUNTIME DESTINATION bin LIBRARY DESTINATION lib)
endif()


include(CPack)